--- a/rain.html
+++ b/rain.html
@@ -508,6 +508,14 @@
             borderColor:["#fff","#fff"],
             borderWidth:2
           }]
+
+
+
+
+
+
+
+
         },
         options:{
           plugins:{ legend:{ position:"bottom", labels:{ color:"#fff"} } }
@@ -523,8 +531,8 @@
           datasets:[{
             label: `Max Temp (°C) — ${city}`,
             data:temps,
-            borderColor:"#FF6384",
-            backgroundColor:"rgba(255,99,132,0.2)",
+            borderColor:"white",
+            backgroundColor:"#36A2EB",
             fill:true,
             tension:0.35
           }]
