--- a/rain.html
+++ b/rain.html
@@ -271,10 +271,10 @@
 </head>
 <body>
   <div class="page-background">
-    <video autoplay muted loop class="bg-video">
-      <source src="video/RainVid.mp4" type="video/mp4"/>
-      Your browser does not support HTML5 video.
-    </video>
+<video autoplay muted loop class="bg-video" id="bgVideo">
+  <source src="video/SunVid.mp4" type="video/mp4"/>
+  Your browser does not support HTML5 video.
+</video>
 
     <div class="container" id="mainContainer">
       <div class="navbar">
@@ -337,17 +337,15 @@
   <script>
     // 1) بيانات المدن
     const weatherData = {
-      "Amman": [
-        {"date":"2025-09-17","precip_mm_day":0.01,"humidity_pct":55.0,"wind_speed_ms":3.2,"temp_day_max_c":32.2,"temp_night_min_c":16.7},
-
-
-{"date":"2025-09-18","precip_mm_day":0.0,"humidity_pct":57.5,"wind_speed_ms":3.9,"temp_day_max_c":32.6,"temp_night_min_c":16.0},
-        {"date":"2025-09-19","precip_mm_day":0.09,"humidity_pct":59.1,"wind_speed_ms":4.0,"temp_day_max_c":31.2,"temp_night_min_c":19.6},
-        {"date":"2025-09-20","precip_mm_day":0.0,"humidity_pct":39.5,"wind_speed_ms":2.2,"temp_day_max_c":32.6,"temp_night_min_c":16.8},
-        {"date":"2025-09-21","precip_mm_day":0.0,"humidity_pct":23.2,"wind_speed_ms":2.6,"temp_day_max_c":34.0,"temp_night_min_c":17.6},
-        {"date":"2025-09-22","precip_mm_day":0.0,"humidity_pct":22.4,"wind_speed_ms":3.0,"temp_day_max_c":34.3,"temp_night_min_c":18.6},
-        {"date":"2025-09-23","precip_mm_day":0.0,"humidity_pct":19.7,"wind_speed_ms":2.6,"temp_day_max_c":35.1,"temp_night_min_c":18.7}
-      ],
+"Amman": [
+  {"date":"2025-01-01","precip_mm_day":12.5,"humidity_pct":82.0,"wind_speed_ms":4.8,"temp_day_max_c":18.2,"temp_night_min_c":11.5},
+  {"date":"2025-01-02","precip_mm_day":9.7,"humidity_pct":79.0,"wind_speed_ms":5.2,"temp_day_max_c":19.0,"temp_night_min_c":12.0},
+  {"date":"2025-01-03","precip_mm_day":15.3,"humidity_pct":85.0,"wind_speed_ms":6.1,"temp_day_max_c":17.5,"temp_night_min_c":10.9},
+  {"date":"2025-01-04","precip_mm_day":8.9,"humidity_pct":78.0,"wind_speed_ms":4.5,"temp_day_max_c":20.1,"temp_night_min_c":12.8},
+  {"date":"2025-01-05","precip_mm_day":11.4,"humidity_pct":81.0,"wind_speed_ms":5.0,"temp_day_max_c":18.7,"temp_night_min_c":11.7},
+  {"date":"2025-01-06","precip_mm_day":7.6,"humidity_pct":76.0,"wind_speed_ms":4.2,"temp_day_max_c":19.4,"temp_night_min_c":12.4},
+  {"date":"2025-01-07","precip_mm_day":13.2,"humidity_pct":84.0,"wind_speed_ms":5.8,"temp_day_max_c":17.9,"temp_night_min_c":11.2}
+],
       "Zarqa": [
         {"date":"2025-09-17","precip_mm_day":0.0,"humidity_pct":57.9,"wind_speed_ms":3.6,"temp_day_max_c":33.3,"temp_night_min_c":18.3},
         {"date":"2025-09-18","precip_mm_day":0.0,"humidity_pct":57.5,"wind_speed_ms":3.95,"temp_day_max_c":32.63,"temp_night_min_c":16.03},
@@ -570,6 +568,8 @@
       renderCharts(city);
       updateSummaryAndTips(city);
       updateCards(city);
+        const latest = getLatestDay(weatherData[city]);
+  updateBackgroundVideo(latest);
     }
 
     // 10) تهيئة أولية
@@ -611,6 +611,29 @@ document.getElementById("humidityAlert").textContent =
   latest.humidity_pct > 60 ? "High humidity" : 
   (latest.humidity_pct < 25 ? "Dry air" : "Normal");
 }
+
+
+
+
+
+
+function updateBackgroundVideo(latest) {
+  const bgVideo = document.getElementById("bgVideo");   // الفيديو نفسه
+  const source = bgVideo.querySelector("source");       // الـ <source> جواته
+
+  if (latest.precip_mm_day > 0) {
+    // إذا في مطر
+    source.src = "video/RainVid.mp4";
+  } else {
+    // إذا مشمس
+    source.src = "video/SunVid.mp4";
+  }
+
+  bgVideo.load();  // إعادة تحميل الفيديو الجديد
+  bgVideo.play();  // تشغيله مباشرة
+}
+
+
 
   </script>
 </body>
