--- a/ts.html
+++ b/ts.html
@@ -273,6 +273,17 @@
         </div>
     </div>
 
+
+        <!-- Astronaut + Bubbles -->
+    <div class="astronaut-container">
+        <img src="img/Astronaut1.png" alt="Astronaut" class="astronaut">
+        <div class="bubbles">
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+            <div class="bubble"></div>
+        </div>
+    </div>
+
     <!-- Speech Bubble -->
     <div class="speech-bubble">
         <h1>Hi again! I'm SkyCue</h1>
