--- a/home.html
+++ b/home.html
@@ -142,6 +142,9 @@
             position: relative;
             overflow: hidden;
         }
+        .box a{
+            text-decoration: none;
+        }
 
         .box::before {
             content: '';
@@ -349,11 +352,15 @@
             </div>
         </div>
         <!--3 boxes-->
-        <div class="boxes">
-            <div class="box">Where to grow</div>
-            <div class="box">Where to go</div>
-           
+      <div class="boxes">
+        <div class="box">
+          <a href="page1.html">Where to grow</a>
         </div>
+        <div class="box">
+          <a href="Rain_Alerts.html">Where to go</a>
+        </div>
+      </div>
+    </div>
     </div>
     <!--container2-->
     <div class="container2">
