--- a/plant.html
+++ b/plant.html
@@ -47,10 +47,8 @@
     left: 0;
     width: 100%;
     height: 35vh;
-    background: linear-gradient(to top, #845c3a 40%, #c1a574 90%);
+    
     z-index: -1;
-    border-top-left-radius: 80px;
-    border-top-right-radius: 80px;
   }
 
   /* ===== النصوص ===== */
@@ -153,7 +151,7 @@
 
 <div class="page-background">
   <video autoplay muted loop class="bg-video" id="bgVideo">
-    <source src="video/SunVid.mp4" type="video/mp4"/>
+    <source src="video/plantVid.mp4" type="video/mp4"/>
   </video>
 
   <div class="sun"></div>
