--- a/Rain_Alerts.html
+++ b/Rain_Alerts.html
@@ -276,7 +276,7 @@
                     <option>Outdoor</option>
                 </select>
             </div>
-            <a href="result.html" class="btn">View Result</a>
+            <a href="rain.html" class="btn">View Result</a>
         </div>
     </div>
 
