--- a/final.html
+++ b/final.html
@@ -195,9 +195,9 @@
 </head>
 <body>
 
-<video autoplay muted loop class="bg-video">
+<!-- <video autoplay muted loop class="bg-video">
   <source src="video/NasaVid.mp4" type="video/mp4">
-</video>
+</video> -->
 
 <header>
   <h1>About SkyCue</h1>
@@ -246,7 +246,7 @@
       <span>Front-End Developer</span>
     </div>
     <div class="member">
-      <img src="" alt="Rama">
+      <img src="/Images of participants/Rama.jpg" alt="Rama">
       <h3>Rama</h3>
       <span>Front-End Developer</span>
     </div>
