--- a/home.html
+++ b/home.html
@@ -144,6 +144,7 @@
         }
         .box a{
             text-decoration: none;
+            color: #cccccc;
         }
 
         .box::before {
@@ -354,7 +355,7 @@
         <!--3 boxes-->
       <div class="boxes">
         <div class="box">
-          <a href="page1.html">Where to grow</a>
+          <a href="plant.html">Where to grow</a>
         </div>
         <div class="box">
           <a href="Rain_Alerts.html">Where to go</a>
