--- a/home.html
+++ b/home.html
@@ -144,7 +144,10 @@
         }
         .box a{
             text-decoration: none;
-            color: #cccccc;
+            color: #8ab8dd;
+        }
+        .box a:hover{
+            color: white;
         }
 
         .box::before {
