--- a/final.html
+++ b/final.html
@@ -243,7 +243,7 @@
     <div class="member">
       <img src="/Images of participants/EnasAlthaher.jpg" alt="Enas">
       <h3>Enas</h3>
-      <span>Front-End Developer</span>
+      <span>UI/UX & Front-End Developer</span>
     </div>
     <div class="member">
       <img src="/Images of participants/Rama.jpg" alt="Rama">
