--- a/plant.html
+++ b/plant.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Find Your Perfect Spot</title>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
   * {
     margin: 0;
@@ -14,14 +14,13 @@
   }
 
   body {
-    overflow: hidden;
-    height: 100vh;
+    overflow-x: hidden;
     width: 100%;
-    background: #aee1f9; /* لون السماء */
-    position: relative;
+    background: #aee1f9;
+    color: #222;
   }
 
-  /* ===== الخلفية بالفيديو ===== */
+  /* ===== الخلفية والفيديو ===== */
   .page-background {
     position: relative;
     width: 100%;
@@ -39,95 +38,6 @@
     z-index: -1;
   }
 
-  /* ===== الأرض والنبات ===== */
-  body::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 35vh;
-    
-    z-index: -1;
-  }
-
-  /* ===== النصوص ===== */
-  .content {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    width: 500px;
-    background: rgba(255, 255, 255, 0.7);
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 4px 25px rgba(0,0,0,0.15);
-  }
-
-  .text h2 {
-    font-size: 38px;
-    font-weight: 300;
-    color: #123;
-    margin-bottom: 5px;
-  }
-
-  .text h3 {
-    font-size: 36px;
-    font-weight: 700;
-    color: #000;
-    letter-spacing: 1px;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.1);
-  }
-
-  .text h4 {
-    font-size: 32px;
-    margin-top: 10px;
-    color: #222;
-  }
-
-  .text h4 strong {
-    background: #4b2c14;
-    color: white;
-    padding: 4px 12px;
-    border-radius: 5px;
-  }
-
-  /* ===== الوصف ===== */
-  .cont p {
-    margin-top: 15px;
-    font-size: 14px;
-    color: #333;
-  }
-
-  .cont h6 {
-    font-size: 17px;
-    font-weight: 600;
-    color: #3b1e0b;
-    margin-top: 20px;
-    margin-bottom: 8px;
-  }
-
-  /* ===== القائمة المنسدلة ===== */
-  select {
-    width: 70%;
-    height: 40px;
-    border: none;
-    border-radius: 8px;
-    background-color: #4b2c14;
-    color: white;
-    font-size: 15px;
-    text-align: center;
-    outline: none;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-
-  select:hover {
-    background-color: #6a4021;
-  }
-
-  /* ===== الشمس ===== */
   .sun {
     position: absolute;
     top: 10%;
@@ -145,15 +55,113 @@
     to { transform: scale(1.1); opacity: 1; }
   }
 
+  /* ===== النصوص الرئيسية ===== */
+  .content {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 500px;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 25px rgba(0,0,0,0.15);
+    animation: fadeIn 1.2s ease-in-out;
+  }
+
+  .text h2 { font-size: 38px; font-weight: 300; color: #123; margin-bottom: 5px; }
+  .text h3 { font-size: 36px; font-weight: 700; color: #000; letter-spacing: 1px; }
+  .text h4 { font-size: 32px; margin-top: 10px; color: #222; }
+  .text h4 strong { background: #4b2c14; color: white; padding: 4px 12px; border-radius: 5px; }
+
+  .cont p { margin-top: 15px; font-size: 14px; color: #333; }
+  .cont h6 { font-size: 17px; font-weight: 600; color: #3b1e0b; margin-top: 20px; margin-bottom: 8px; }
+
+  select {
+    width: 70%;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    background-color: #4b2c14;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  select:hover { background-color: #6a4021; }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(40px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  /* ===== القسم الثاني (Dashboard) ===== */
+  section.dashboard-section {
+    width: 100%;
+    min-height: 100vh;
+    background-image: url('/img/bgg.png');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh ;
+    /* background: linear-gradient(to top, #e8f5e9, #ffffff); غيّر الخلفية هنا حسب رغبتك */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 60px 0;
+  }
+
+  .dashboard {
+    text-align: center;
+    background: rgba(255,255,255,0.9);
+    border-radius: 20px;
+    padding: 30px 40px;
+    box-shadow: 0 4px 25px rgba(0,0,0,0.15);
+    width: 600px;
+    animation: fadeIn 1.5s ease;
+  }
+
+  .dashboard h2 { font-size: 22px; color: #1b1b1b; }
+  .dashboard p { font-size: 14px; color: #444; }
+
+  .chart-box {
+    width: 250px;
+    height: 250px;
+    margin: 20px auto;
+  }
+
+  .astronaut {
+    width: 130px;
+    animation: float 3s ease-in-out infinite;
+  }
+
+  @keyframes float {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
+  }
+
+  .speech {
+    background: white;
+    color: #222;
+    border-radius: 10px;
+    padding: 15px 25px;
+    font-size: 14px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    width: 280px;
+    margin: 10px auto;
+  }
 </style>
 </head>
 <body>
 
+<!-- القسم الأول -->
 <div class="page-background">
-  <video autoplay muted loop class="bg-video" id="bgVideo">
+  <video autoplay muted loop class="bg-video">
     <source src="video/plantVid.mp4" type="video/mp4"/>
   </video>
-
   <div class="sun"></div>
 
   <div class="content">
@@ -175,6 +183,43 @@
     </div>
   </div>
 </div>
+
+<!-- القسم الثاني (Dashboard بعد الخلفية) -->
+<section class="dashboard-section">
+  <div class="dashboard">
+    <h2>Dashboard updated ✅</h2>
+    <p>See how rain factors affect your chances of success</p>
+    <div class="chart-box">
+      <canvas id="rainChart"></canvas>
+    </div>
+    <img src="img/astronaut.png" alt="Astronaut" class="astronaut">
+    <div class="speech">This location is suitable for farming with a high success rate</div>
+  </div>
+</section>
+
+<script>
+  const ctx = document.getElementById('rainChart');
+  new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+      labels: ['Temperature', 'Humidity', 'Wind Speed', 'Air Pressure', 'Wind'],
+      datasets: [{
+        data: [45, 20, 10, 25, 25],
+        backgroundColor: ['#f48c06', '#f9c74f', '#577590', '#90be6d', '#f94144'],
+        borderColor: '#fff',
+        borderWidth: 2
+      }]
+    },
+    options: {
+      plugins: {
+        legend: {
+          position: 'right',
+          labels: { color: '#000' }
+        }
+      }
+    }
+  });
+</script>
 
 </body>
 </html>
