--- a/rain.html
+++ b/rain.html
@@ -190,7 +190,7 @@
 
 .weather-stats {
       flex: 2;
-      background: rgba(0,0,0,.4);
+      background: rgba(99, 95, 95, 0);
       border-radius: 12px;
       padding: 20px;
       backdrop-filter: blur(8px);
@@ -216,7 +216,7 @@
     /* === Tips Box === */
     .side-box {
       flex: 1;
-      background: rgba(255,255,255,.05);
+      background: rgba(255, 255, 255, 0.05);
       border-radius: 12px;
       backdrop-filter: blur(8px);
       padding: 20px;
@@ -657,7 +657,7 @@ function updateBackgroundVideo(latest) {
     source.src = "video/RainVid.mp4";
   } else {
     // إذا مشمس
-    source.src = "video/SunVid.mp4";
+    source.src = "video/Sun2Vid.mp4";
   }
 
   bgVideo.load();  // إعادة تحميل الفيديو الجديد
