--- a/plant.html
+++ b/plant.html
@@ -16,12 +16,13 @@
   body {
     overflow-x: hidden;
     width: 100%;
-    background: #aee1f9;
+    background-color: #090909;
     color: #222;
   }
 
   /* ===== الخلفية والفيديو ===== */
   .page-background {
+   
     position: relative;
     width: 100%;
     height: 100vh;
@@ -100,42 +101,40 @@
 
   /* ===== القسم الثاني (Dashboard) ===== */
   section.dashboard-section {
-    width: 100%;
-    min-height: 100vh;
-    background-image: url('/img/bgg.png');
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh ;
-    /* background: linear-gradient(to top, #e8f5e9, #ffffff); غيّر الخلفية هنا حسب رغبتك */
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    padding: 60px 0;
+    justify-content: flex-start; /* لجعل الداشبورد على اليسار */
+    /* background-image: url('/img/bgg.png');
+    background-repeat: no-repeat; */
+    background-size: cover;
+    height: 100vh;
+    padding: 0 60px;
   }
 
   .dashboard {
-    text-align: center;
+    text-align: left;
     background: rgba(255,255,255,0.9);
     border-radius: 20px;
     padding: 30px 40px;
     box-shadow: 0 4px 25px rgba(0,0,0,0.15);
-    width: 600px;
+    width: 380px;
     animation: fadeIn 1.5s ease;
   }
 
-  .dashboard h2 { font-size: 22px; color: #1b1b1b; }
-  .dashboard p { font-size: 14px; color: #444; }
+  .dashboard h2 { font-size: 22px; color: #1b1b1b; margin-bottom: 10px; }
+  .dashboard p { font-size: 14px; color: #444; margin-bottom: 20px; }
 
   .chart-box {
-    width: 250px;
-    height: 250px;
+    width: 220px;
+    height: 220px;
     margin: 20px auto;
   }
 
   .astronaut {
-    width: 130px;
+    width: 100px;
     animation: float 3s ease-in-out infinite;
+    display: block;
+    margin: 0 auto;
   }
 
   @keyframes float {
@@ -147,11 +146,12 @@
     background: white;
     color: #222;
     border-radius: 10px;
-    padding: 15px 25px;
-    font-size: 14px;
+    padding: 12px 18px;
+    font-size: 13px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    width: 280px;
+    width: 240px;
     margin: 10px auto;
+    text-align: center;
   }
 </style>
 </head>
@@ -160,9 +160,9 @@
 <!-- القسم الأول -->
 <div class="page-background">
   <video autoplay muted loop class="bg-video">
-    <source src="video/plantVid.mp4" type="video/mp4"/>
+    <source src="video/Rain2Vid.mp4" type="video/mp4"/>
   </video>
-  <div class="sun"></div>
+ 
 
   <div class="content">
     <div class="text">
@@ -184,10 +184,10 @@
   </div>
 </div>
 
-<!-- القسم الثاني (Dashboard بعد الخلفية) -->
+<!-- القسم الثاني (Dashboard على اليسار) -->
 <section class="dashboard-section">
   <div class="dashboard">
-    <h2>Dashboard updated ✅</h2>
+    <h2>Dashboard Updated</h2>
     <p>See how rain factors affect your chances of success</p>
     <div class="chart-box">
       <canvas id="rainChart"></canvas>
