--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
             gap: 2rem;
         }
 
-        .gal1, .gal2 {
+        .gal1, .gal2 ,.gal3{
             text-align: center;
             width: 100%;
             padding:65px;
@@ -366,6 +366,7 @@
 <div class="boxes">
   <a href="plant.html" class="box">Where to grow</a>
   <a href="Rain_Alerts.html" class="box">Where to go</a>
+  <a href="space.html" class="box">Beyond the Sky</a>
 </div>
     </div>
     </div>
@@ -376,7 +377,7 @@
         <div class="Gallery2">
             <div class="gal1">
               <img height="40%" src="https://images-assets.nasa.gov/image/NHQ202309270032/NHQ202309270032~medium.jpg"/>
-                 <h2>Where to grow</h2>
+                 <h2>Where to go</h2>
               <h4 style="padding: 10%;">Pick your travel destination, 
                     and we’ll provide weather conditions,
                      key factors that might affect your trip, and practical tips
@@ -386,6 +387,12 @@
                  <img height="40%" src="https://images-assets.nasa.gov/image/GRC-2019-C-01953/GRC-2019-C-01953~medium.jpg"/>
                  <h2>Where to grow</h2>
                 <h4 style="padding: 10%;"> Choose your city or region, and we’ll analyze climate data to show you the success rate for planting, along with tips for the best time and place to grow.</h4>
+            </div>
+            <div class="gal3">
+                <img height="40%" src="img/gal3.jpg"/>
+                <h2>Beyond the Sky</h2>
+                <h4 style="padding: 10%;">
+Discover how solar winds and cosmic forces shape our universe and life on Earth. </h4>
             </div>
         </div>
     </div>
